# fishingrod_ws

./: .gitignore  Dockerfile  Dockerfile.dockerfile  README.md  build.bash  build_and_run.sh  readme.md  run.bash  terminal.bash  test_rl_notebook_data_post_exp2.ipynb  test_rl_notebook_plot_ToDo.ipynb
.config/: entrypoint.sh  update_bashrc_ros_2
install/: local_setup.sh  setup.sh
install/fishingrod_description/share/fishingrod_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fishingrod_description/share/fishingrod_description/cmake/: fishingrod_descriptionConfig-version.cmake  fishingrod_descriptionConfig.cmake
install/fishingrod_description/share/fishingrod_description/environment/: ament_prefix_path.dsv  path.dsv
install/fishingrod_description/share/fishingrod_description/launch/: display_fishingrod.launch.py  gazebo_fishingrod.launch.py
install/fishingrod_description/share/fishingrod_description/rviz/: config.rviz
install/fishingrod_description/share/fishingrod_description/urdf/: fishingrod.urdf  fishingrod.xacro  fishingrod_old_.urdf  (+1 more)
install/fishingrod_gazebo/share/fishingrod_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pi3hat_moteus_int_msgs/share/pi3hat_moteus_int_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rbt_pd_cnt/include/rbt_pd_cnt/: real_pd_cnt.hpp  robot_pd_cnt.hpp
install/rbt_pd_cnt/share/rbt_pd_cnt/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  rbt_pd_cnt.xml
install/rlg_quad_controller/share/rlg_quad_controller/: package.sh  package.xml
install/sea_plugin_package/share/sea_plugin_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/test_experiments/lib/test_experiments/: test_node
install/test_experiments/share/test_experiments/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/throw_experiments/lib/jumping_experiments/: getup  throw_node
install/throw_experiments/share/throw_experiments/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/ddp_fishing/: package.xml  setup.cfg  setup.py
src/ddp_fishing/config/: ddp_controller_params.yaml
src/ddp_fishing/ddp_fishing/: bag_recorder.py  ballistic_motion.py  ddp_controller_publishing_node.py  utils.py
src/ddp_fishing/launch/: controller_start.launch.py  ddp_sim.launch.py  run_experiment.launch.py  visualize_fishingrod.launch.py
src/fishingrod_description/: CMakeLists.txt  package.xml
src/fishingrod_description/launch/: display_fishingrod.launch.py  gazebo_fishingrod.launch.py
src/fishingrod_description/urdf/: fishingrod.urdf  fishingrod.xacro  fishingrod_old_.urdf  fishingrod_sea_decent.urdf  fishingrod_sea_decent_002.urdf  fishingrod_sea_decent_003.urdf  fishingrod_tri.urdf
src/fishingrod_description/world/: empty.world  gap.world
src/fishingrod_gazebo/: CMakeLists.txt  package.xml
src/fishingrod_gazebo/config/: fishingrod_gazebo_sim_jnt_PD.yaml
src/fishingrod_gazebo/launch/: sim.launch.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/rlg_quad_controller/: setup.py
src/rlg_quad_controller/config/: fishingrod_config.yaml  fishingrod_simulation_config.yaml
src/rlg_quad_controller/launch/: fishingrod_inference.launch.py  fishingrod_simulation.launch.py
src/rlg_quad_controller/models/FishingRodPos_X_022_real_pos_vel/: FishingRodPos_X_022_real_pos_vel.pth  config.yaml
src/rlg_quad_controller/rlg_quad_controller/: inference_controller.py  inference_controller_todo.py
src/rlg_quad_controller/rlg_quad_controller/utils/: rlg_utils.py  torch_utils.py
src/sea_plugin_package/: CMakeLists.txt
src/sea_plugin_package/src/: SerialElasticPlugin.cc  SerialElasticPluginFish.cc  SerialElasticPluginTri.cc
src/test_experiments/: package.xml  setup.cfg  setup.py
src/test_experiments/config/: fishing_simulation_config.yaml
src/test_experiments/launch/: test_sim.launch.py
src/test_experiments/test_experiments/: test_node.py
src/throw_experiments/: package.xml  setup.py
src/throw_experiments/launch/: experiment.launch.py  experiment_simulation.launch.py
src/throw_experiments/throw_experiments/: bridge_node.py  getup.py  throw_node.py
(+117 files in other folders)
